[package]
name = "new"
version = "0.0.0"
edition = "2021"
description = "A Struct::new method generator for Rust by proc macro"
repository = "https://github.com/hzqd/new"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.35"
syn = {version = "2.0.48", features = ["extra-traits", "full"]}
